add more pictures

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <img src="project-img16.png" style="width:100%">
     <img src="project-img17.png" style="width:100%">
     <img src="project-img18.png" style="width:100%">
+    <img src="project-img19.png" style="width:100%">
   </div>
 </div>
 
