--- a/index.html
+++ b/index.html
@@ -42,31 +42,31 @@
 <!-- Photo Grid -->
 <div class="w3-row" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
-    <img src="project-img1.png" style="width:100%">
-    <img src="project-img2.png" style="width:100%">
-    <img src="project-img3.png" style="width:100%">
-    <img src="project-img4.png" style="width:100%">
-    <img src="project-img5.png" style="width:100%">
-    <img src="project-img6.png" style="width:100%">
+    <img src="images/project-img1.png" style="width:100%">
+    <img src="images/project-img2.png" style="width:100%">
+    <img src="images/project-img3.png" style="width:100%">
+    <img src="images/project-img4.png" style="width:100%">
+    <img src="images/project-img5.png" style="width:100%">
+    <img src="images/project-img6.png" style="width:100%">
   </div>
 
   <div class="w3-third">
-    <img src="project-img7.png" style="width:100%">
-    <img src="project-img8.png" style="width:100%">
-    <img src="project-img9.png" style="width:100%">
-    <img src="project-img10.png" style="width:100%">
-    <img src="project-img11.png" style="width:100%">
-    <img src="project-img12.png" style="width:100%">
+    <img src="images/project-img7.png" style="width:100%">
+    <img src="images/project-img8.png" style="width:100%">
+    <img src="images/project-img9.png" style="width:100%">
+    <img src="images/project-img10.png" style="width:100%">
+    <img src="images/project-img11.png" style="width:100%">
+    <img src="images/project-img12.png" style="width:100%">
   </div>
 
   <div class="w3-third">
-    <img src="project-img13.png" style="width:100%">
-    <img src="project-img14.png" style="width:100%">
-    <img src="project-img15.png" style="width:100%">
-    <img src="project-img16.png" style="width:100%">
-    <img src="project-img17.png" style="width:100%">
-    <img src="project-img18.png" style="width:100%">
-    <img src="project-img19.png" style="width:100%">
+    <img src="images/project-img13.png" style="width:100%">
+    <img src="images/project-img14.png" style="width:100%">
+    <img src="images/project-img15.png" style="width:100%">
+    <img src="images/project-img16.png" style="width:100%">
+    <img src="images/project-img17.png" style="width:100%">
+    <img src="images/project-img18.png" style="width:100%">
+    <img src="images/project-img19.png" style="width:100%">
   </div>
 </div>
 
@@ -81,7 +81,7 @@
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">simona.developer</a></p>
+  <p class="w3-medium">Powered by <a href="" target="_blank" class="w3-hover-text-green">simona.developer</a></p>
 </footer>
  
 <script>
